--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 ### IntelliJ IDEA ###
-./.idea
+/.idea
 out/
-./250406
-./src
+/250406
+/src
 !**/src/main/**/out/
 !**/src/test/**/out/
 ### Eclipse ###
